--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     />
     <title>Star DB</title>
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/darkly/bootstrap.min.css"
+    />
   </head>
   <body>
     <main id="root"></main>
